	Changing the library core and make it more minimal and more powerful.
	New method unset_jquery. Very useful, if you already have the jquery library at your basic template.This is good to avoid jquery conflicts.
	BUG fix. No more conflicts between flexigrid tables. There was a cookie conflict between different lists.
	Renaming the folder public to assets.
	Grocery CRUD is now ready to be a spark.
	Changing the functionality and the javascript of the uploader. There is no need to have $config['enable_query_strings'] set to true anymore.
v.1.1.2
	Renaming the label "Tools" to "Actions".
	Creation of new field type : "hidden" to add hidden fields. You can also add a value to the hidden field.
	Updating Javascripts: datatables, file_uploader.
	Disable sorting of the row "Actions" on datatables theme and fix the actions hover on paging that didn't work.
	Adding new feature/function add_action. Adds icons and urls for custom "actions".
	Adding .htaccess files to the views of themes for security reasons.
v.1.1
	Bug Fix - Datetime picker now works fine to an empty input. It also works fine to the add operation.
	When the edit and the delete is unset then dissapear the column Tools.
	The default library/model is not in a third party but has been moved in the main codeigniter foldering for better functionality and to use it in both CI 1.7.x and CI 2.0.x .
	Delete the grocery Exceptions Library. Everyone can create his own exception library . It was just an example.
	Add new jquery version 1.6.2 and renewing some plugins.
	Remove php short tags.
	No direct script access allowed on the views.
	Renaming function set_relation_1_n to set_relation_n_n. The functionality has not change.
	Removing the libraries MY_Output.php and MY_Loader.php from the core folder.
	Removing the folder template. The template was just an example and confused lot of people.
	Fully compatible with Codeigniter versions 1.7.x , 2.0.0 - 2.0.3.