@@ -769,6 +769,11 @@ class grocery_Model_Driver extends grocery_Field_Types
 		}		
 	}	
 	
+    protected function _unique_join_name($field_name)
+    {
+    	return 'j'.substr(md5($field_name),0,6); //This j is because is better for a string to begin with a letter and not a number
+    }	
+	
 	protected function db_delete($state_info)
 	{
 		$primary_key 	= $state_info->primary_key;
@@ -2400,7 +2405,7 @@ class grocery_CRUD extends grocery_States
 			{				
 				if(isset($this->relation[$column]))
 				{
-					$new_column = $this->relation[$column][1].'.'.$this->relation[$column][2];
+					$new_column = $this->_unique_join_name($this->relation[$column][0]).'.'.$this->relation[$column][2];
 					$this->columns[$col_num] = $new_column;
 					
 					if(isset($this->display_as[$column]))
